force-app/main/default/objects/Customer_Asset__c/Customer_Asset__c.object-meta.xml
<CustomObject>
    <description>A summarization of the Steelbrick Subscriptions and Steelbrick Assets for the Customer.</description>
    <label>Customer Asset</label>
    <nameField>
        <label>Customer Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>