force-app/main/default/objects/Customer_Asset__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <inlineHelpText>The annual recurring revenue for the product. If product is usage based, ARR is the greater of $0 or the contracted minimum.</inlineHelpText>
    <label>Annual Recurring Revenue(hidden)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>