force-app/main/default/objects/Customer_Asset__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>