force-app/main/default/objects/Customer_Asset__c/fields/Asset_Account_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account_Cust_ID__c</fullName>
    <formula>IF (ISBLANK(Latest_Quote_Line__r.SBQQ__Group__r.Affiliate_Account2__c), 
    Account__r.QWBS_Cust_ID__c, 
    Latest_Quote_Line__r.SBQQ__Group__r.Affiliate_Account2__r.Parent_Account__r.QWBS_Cust_ID__c 
)</formula>
    <label>Asset Account Cust ID</label>
    <type>Text</type>
</CustomField>