force-app/main/default/objects/Customer_Asset__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>