force-app/main/default/objects/Customer_Asset__c/fields/Consumed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Quantity__c</fullName>
    <label>Consumed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>