force-app/main/default/objects/Customer_Asset__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>