force-app/main/default/objects/Customer_Asset__c/fields/Contracted_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Licenses__c</fullName>
    <label>Contracted Licenses</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>