force-app/main/default/objects/Customer_Asset__c/fields/Decommission_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Effective_Date__c</fullName>
    <description>The effective date to decommission this asset. Used for future dating decommission of assets.</description>
    <inlineHelpText>The effective date to decommission this asset. Used for future dating decommission of assets.</inlineHelpText>
    <label>Decommission Effective Date</label>
    <type>Date</type>
</CustomField>