force-app/main/default/objects/Customer_Asset__c/fields/Eval2_Document__c.field-meta.xml
<CustomField>
    <fullName>Eval2_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval2 (Document)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assets (Eval2 (Document))</relationshipLabel>
    <relationshipName>Eval2_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>