force-app/main/default/objects/Customer_Asset__c/fields/Eval_Document__c.field-meta.xml
<CustomField>
    <fullName>Eval_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval (Document)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assets (Eval (Document))</relationshipLabel>
    <relationshipName>Eval_Document_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>