force-app/main/default/objects/Customer_Asset__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Key__c is used by the batch Forecast update class to match Customer Assets that need to be updated with shipment lines or subscription invoices</description>
    <formula>IF (ISBLANK(Oracle_Id__c), 
    &apos;&apos;, 
    Account__c + Oracle_Id__c 
)</formula>
    <inlineHelpText>Key__c is used by the batch Forecast update class to match Customer Assets that need to be updated with shipment lines or subscription invoices</inlineHelpText>
    <label>Key</label>
    <type>Text</type>
</CustomField>