force-app/main/default/objects/Customer_Asset__c/fields/Latest_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>