force-app/main/default/objects/Customer_Asset__c/fields/Latest_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>