force-app/main/default/objects/Customer_Asset__c/fields/License_Metric__c.field-meta.xml
<CustomField>
    <fullName>License_Metric__c</fullName>
    <formula>TEXT(Product__r.License_Metric__c)</formula>
    <label>License Metric</label>
    <type>Text</type>
</CustomField>