force-app/main/default/objects/Customer_Asset__c/fields/Max_Forecast_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Forecast_Number__c</fullName>
    <label>Max Forecast Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>