force-app/main/default/objects/Customer_Asset__c/fields/Migrate_Contracted_Asset__c.field-meta.xml
<CustomField>
    <fullName>Migrate_Contracted_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrate Contracted Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>