force-app/main/default/objects/Customer_Asset__c/fields/MSA_Document__c.field-meta.xml
<CustomField>
    <fullName>MSA_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA (Document)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assets (MSA)</relationshipLabel>
    <relationshipName>MSA_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>