force-app/main/default/objects/Customer_Asset__c/fields/Needs_Reallocation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reallocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Reallocation?</label>
    <type>Checkbox</type>
</CustomField>