force-app/main/default/objects/Customer_Asset__c/fields/Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Id__c</fullName>
    <label>Oracle Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>