force-app/main/default/objects/Customer_Asset__c/fields/Price2__c.field-meta.xml
<CustomField>
    <fullName>Price2__c</fullName>
    <description>New Price field is directly reflective of the CPQ Asset or Subscription linked to the Customer Asset record. This field is populated via Process Builder.</description>
    <label>Price2</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>