force-app/main/default/objects/Customer_Asset__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT( Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Second level of the product hierarchy.</inlineHelpText>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>