force-app/main/default/objects/Customer_Asset__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <formula>TEXT( Product__r.Product_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First level of product hierarchy.</inlineHelpText>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>