force-app/main/default/objects/Customer_Asset__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>TEXT( Product__r.Product_Line__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Third level of the product hierarchy.</inlineHelpText>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>