force-app/main/default/objects/Customer_Asset__c/fields/Product_Schedule_Document__c.field-meta.xml
<CustomField>
    <fullName>Product_Schedule_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Schedule (Document)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Assets (Product Schedule)</relationshipLabel>
    <relationshipName>Product_Schedule_Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>