force-app/main/default/objects/Customer_Asset__c/fields/Steelbrick_Asset__c.field-meta.xml
<CustomField>
    <fullName>Steelbrick_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Steelbrick Asset</description>
    <label>Steelbrick Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>