force-app/main/default/objects/Customer_Asset__c/fields/Steelbrick_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Steelbrick_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Steelbrick subscription</description>
    <label>Steelbrick Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Customer Assets</relationshipLabel>
    <relationshipName>Customer_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>