force-app/main/default/objects/Customer_Asset__c/fields/Total_One_Time_Fee_s__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Fee_s__c</fullName>
    <description>Net price of the related non-recurring product. API Name: Total_One_Time_Fee_s</description>
    <inlineHelpText>Net price of the related non-recurring product.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>