force-app/main/default/objects/Customer_Asset__c/fields/Update_Customer_Asset_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Update_Customer_Asset_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Customer Asset (Hidden), to be used to trigger the Process Builder Flow to update the Financial Fields</description>
    <inlineHelpText>Update Customer Asset (Hidden), to be used to trigger the Process Builder Flow to update the Financial Fields</inlineHelpText>
    <label>Update Customer Asset (Hidden)</label>
    <type>Checkbox</type>
</CustomField>